src/main/antlr4/sicxe/.antlr/SICXEParser.java
// Generated from /home/luis/Descargas/p03-bloques/p03-work/src/main/antlr4/sicxe/SICXE.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class SICXEParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KSTART=1, KEND=2, KBYTE=3, KWORD=4, KRESW=5, KRESB=6, KBASE=7, KEQU=8, 
		KORG=9, KUSE=10, KRSUB=11, OPCODE_F1=12, OPCODE_F2_RR=13, OPCODE_F2_RN=14, 
		OPCODE_F2_R=15, OPCODE=16, XREG=17, REG=18, LITC=19, LITX=20, HEXNUM=21, 
		ID=22, NUMBER=23, MAS=24, MENOS=25, MUL=26, DIV=27, HASH=28, ARROBA=29, 
		COMA=30, PAREN_IZQ=31, PAREN_DER=32, COM_PUNTO=33, COM_PCOMA=34, ESPACIOS=35, 
		NEWLINE=36;
	public static final int
		RULE_programa = 0, RULE_encabezado = 1, RULE_cuerpo = 2, RULE_lineaOk = 3, 
		RULE_lineaError = 4, RULE_tokensError = 5, RULE_cierre = 6, RULE_destino = 7, 
		RULE_linea = 8, RULE_enunciado = 9, RULE_etiqueta = 10, RULE_instruccion = 11, 
		RULE_modoAcceso = 12, RULE_referencia = 13, RULE_reg = 14, RULE_directiva = 15, 
		RULE_contenidoByte = 16, RULE_expresion = 17, RULE_termino = 18, RULE_factor = 19, 
		RULE_numeral = 20;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "encabezado", "cuerpo", "lineaOk", "lineaError", "tokensError", 
			"cierre", "destino", "linea", "enunciado", "etiqueta", "instruccion", 
			"modoAcceso", "referencia", "reg", "directiva", "contenidoByte", "expresion", 
			"termino", "factor", "numeral"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'START'", "'END'", "'BYTE'", "'WORD'", "'RESW'", "'RESB'", "'BASE'", 
			"'EQU'", "'ORG'", "'USE'", "'RSUB'", null, null, null, null, null, "'X'", 
			null, null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'#'", 
			"'@'", "','", "'('", "')'", null, null, null, "'\\n'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KSTART", "KEND", "KBYTE", "KWORD", "KRESW", "KRESB", "KBASE", 
			"KEQU", "KORG", "KUSE", "KRSUB", "OPCODE_F1", "OPCODE_F2_RR", "OPCODE_F2_RN", 
			"OPCODE_F2_R", "OPCODE", "XREG", "REG", "LITC", "LITX", "HEXNUM", "ID", 
			"NUMBER", "MAS", "MENOS", "MUL", "DIV", "HASH", "ARROBA", "COMA", "PAREN_IZQ", 
			"PAREN_DER", "COM_PUNTO", "COM_PCOMA", "ESPACIOS", "NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SICXE.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SICXEParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramaContext extends ParserRuleContext {
		public EncabezadoContext encabezado() {
			return getRuleContext(EncabezadoContext.class,0);
		}
		public CuerpoContext cuerpo() {
			return getRuleContext(CuerpoContext.class,0);
		}
		public CierreContext cierre() {
			return getRuleContext(CierreContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SICXEParser.EOF, 0); }
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(42);
			encabezado();
			setState(43);
			cuerpo();
			setState(44);
			cierre();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EncabezadoContext extends ParserRuleContext {
		public TerminalNode KSTART() { return getToken(SICXEParser.KSTART, 0); }
		public NumeralContext numeral() {
			return getRuleContext(NumeralContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(SICXEParser.NEWLINE, 0); }
		public EtiquetaContext etiqueta() {
			return getRuleContext(EtiquetaContext.class,0);
		}
		public EncabezadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_encabezado; }
	}

	public final EncabezadoContext encabezado() throws RecognitionException {
		EncabezadoContext _localctx = new EncabezadoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_encabezado);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(47);
				etiqueta();
				}
			}

			setState(50);
			match(KSTART);
			setState(51);
			numeral();
			setState(52);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CuerpoContext extends ParserRuleContext {
		public List<LineaOkContext> lineaOk() {
			return getRuleContexts(LineaOkContext.class);
		}
		public LineaOkContext lineaOk(int i) {
			return getRuleContext(LineaOkContext.class,i);
		}
		public CuerpoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cuerpo; }
	}

	public final CuerpoContext cuerpo() throws RecognitionException {
		CuerpoContext _localctx = new CuerpoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cuerpo);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(54);
					lineaOk();
					}
					} 
				}
				setState(59);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineaOkContext extends ParserRuleContext {
		public LineaContext linea() {
			return getRuleContext(LineaContext.class,0);
		}
		public LineaErrorContext lineaError() {
			return getRuleContext(LineaErrorContext.class,0);
		}
		public LineaOkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineaOk; }
	}

	public final LineaOkContext lineaOk() throws RecognitionException {
		LineaOkContext _localctx = new LineaOkContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lineaOk);
		try {
			setState(62);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(60);
				linea();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(61);
				lineaError();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineaErrorContext extends ParserRuleContext {
		public TerminalNode NEWLINE() { return getToken(SICXEParser.NEWLINE, 0); }
		public List<TokensErrorContext> tokensError() {
			return getRuleContexts(TokensErrorContext.class);
		}
		public TokensErrorContext tokensError(int i) {
			return getRuleContext(TokensErrorContext.class,i);
		}
		public LineaErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lineaError; }
	}

	public final LineaErrorContext lineaError() throws RecognitionException {
		LineaErrorContext _localctx = new LineaErrorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lineaError);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(64);
				tokensError();
				}
				}
				setState(67); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 8589934584L) != 0) );
			setState(69);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TokensErrorContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SICXEParser.ID, 0); }
		public TerminalNode NUMBER() { return getToken(SICXEParser.NUMBER, 0); }
		public TerminalNode HEXNUM() { return getToken(SICXEParser.HEXNUM, 0); }
		public TerminalNode LITC() { return getToken(SICXEParser.LITC, 0); }
		public TerminalNode LITX() { return getToken(SICXEParser.LITX, 0); }
		public TerminalNode MAS() { return getToken(SICXEParser.MAS, 0); }
		public TerminalNode MENOS() { return getToken(SICXEParser.MENOS, 0); }
		public TerminalNode MUL() { return getToken(SICXEParser.MUL, 0); }
		public TerminalNode DIV() { return getToken(SICXEParser.DIV, 0); }
		public TerminalNode HASH() { return getToken(SICXEParser.HASH, 0); }
		public TerminalNode ARROBA() { return getToken(SICXEParser.ARROBA, 0); }
		public TerminalNode COMA() { return getToken(SICXEParser.COMA, 0); }
		public TerminalNode PAREN_IZQ() { return getToken(SICXEParser.PAREN_IZQ, 0); }
		public TerminalNode PAREN_DER() { return getToken(SICXEParser.PAREN_DER, 0); }
		public TerminalNode OPCODE() { return getToken(SICXEParser.OPCODE, 0); }
		public TerminalNode OPCODE_F1() { return getToken(SICXEParser.OPCODE_F1, 0); }
		public TerminalNode OPCODE_F2_RR() { return getToken(SICXEParser.OPCODE_F2_RR, 0); }
		public TerminalNode OPCODE_F2_RN() { return getToken(SICXEParser.OPCODE_F2_RN, 0); }
		public TerminalNode OPCODE_F2_R() { return getToken(SICXEParser.OPCODE_F2_R, 0); }
		public TerminalNode KRSUB() { return getToken(SICXEParser.KRSUB, 0); }
		public TerminalNode KBYTE() { return getToken(SICXEParser.KBYTE, 0); }
		public TerminalNode KWORD() { return getToken(SICXEParser.KWORD, 0); }
		public TerminalNode KRESB() { return getToken(SICXEParser.KRESB, 0); }
		public TerminalNode KRESW() { return getToken(SICXEParser.KRESW, 0); }
		public TerminalNode KBASE() { return getToken(SICXEParser.KBASE, 0); }
		public TerminalNode KEQU() { return getToken(SICXEParser.KEQU, 0); }
		public TerminalNode KORG() { return getToken(SICXEParser.KORG, 0); }
		public TerminalNode KUSE() { return getToken(SICXEParser.KUSE, 0); }
		public TerminalNode REG() { return getToken(SICXEParser.REG, 0); }
		public TerminalNode XREG() { return getToken(SICXEParser.XREG, 0); }
		public TokensErrorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tokensError; }
	}

	public final TokensErrorContext tokensError() throws RecognitionException {
		TokensErrorContext _localctx = new TokensErrorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_tokensError);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 8589934584L) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CierreContext extends ParserRuleContext {
		public TerminalNode KEND() { return getToken(SICXEParser.KEND, 0); }
		public EtiquetaContext etiqueta() {
			return getRuleContext(EtiquetaContext.class,0);
		}
		public DestinoContext destino() {
			return getRuleContext(DestinoContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(SICXEParser.NEWLINE, 0); }
		public CierreContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cierre; }
	}

	public final CierreContext cierre() throws RecognitionException {
		CierreContext _localctx = new CierreContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cierre);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(73);
				etiqueta();
				}
			}

			setState(76);
			match(KEND);
			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2195718144L) != 0)) {
				{
				setState(77);
				destino();
				}
			}

			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==NEWLINE) {
				{
				setState(80);
				match(NEWLINE);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DestinoContext extends ParserRuleContext {
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public DestinoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_destino; }
	}

	public final DestinoContext destino() throws RecognitionException {
		DestinoContext _localctx = new DestinoContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_destino);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			expresion();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LineaContext extends ParserRuleContext {
		public EnunciadoContext enunciado() {
			return getRuleContext(EnunciadoContext.class,0);
		}
		public TerminalNode NEWLINE() { return getToken(SICXEParser.NEWLINE, 0); }
		public EtiquetaContext etiqueta() {
			return getRuleContext(EtiquetaContext.class,0);
		}
		public LineaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_linea; }
	}

	public final LineaContext linea() throws RecognitionException {
		LineaContext _localctx = new LineaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_linea);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(85);
				etiqueta();
				}
			}

			setState(88);
			enunciado();
			setState(89);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EnunciadoContext extends ParserRuleContext {
		public InstruccionContext instruccion() {
			return getRuleContext(InstruccionContext.class,0);
		}
		public DirectivaContext directiva() {
			return getRuleContext(DirectivaContext.class,0);
		}
		public EnunciadoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enunciado; }
	}

	public final EnunciadoContext enunciado() throws RecognitionException {
		EnunciadoContext _localctx = new EnunciadoContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_enunciado);
		try {
			setState(93);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case KRSUB:
			case OPCODE_F1:
			case OPCODE_F2_RR:
			case OPCODE_F2_RN:
			case OPCODE_F2_R:
			case OPCODE:
			case MAS:
				enterOuterAlt(_localctx, 1);
				{
				setState(91);
				instruccion();
				}
				break;
			case KBYTE:
			case KWORD:
			case KRESW:
			case KRESB:
			case KBASE:
			case KEQU:
			case KORG:
			case KUSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(92);
				directiva();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EtiquetaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SICXEParser.ID, 0); }
		public EtiquetaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_etiqueta; }
	}

	public final EtiquetaContext etiqueta() throws RecognitionException {
		EtiquetaContext _localctx = new EtiquetaContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_etiqueta);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			match(ID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InstruccionContext extends ParserRuleContext {
		public TerminalNode MAS() { return getToken(SICXEParser.MAS, 0); }
		public TerminalNode OPCODE() { return getToken(SICXEParser.OPCODE, 0); }
		public ModoAccesoContext modoAcceso() {
			return getRuleContext(ModoAccesoContext.class,0);
		}
		public TerminalNode OPCODE_F2_RR() { return getToken(SICXEParser.OPCODE_F2_RR, 0); }
		public List<RegContext> reg() {
			return getRuleContexts(RegContext.class);
		}
		public RegContext reg(int i) {
			return getRuleContext(RegContext.class,i);
		}
		public TerminalNode COMA() { return getToken(SICXEParser.COMA, 0); }
		public TerminalNode OPCODE_F2_RN() { return getToken(SICXEParser.OPCODE_F2_RN, 0); }
		public NumeralContext numeral() {
			return getRuleContext(NumeralContext.class,0);
		}
		public TerminalNode OPCODE_F2_R() { return getToken(SICXEParser.OPCODE_F2_R, 0); }
		public TerminalNode KRSUB() { return getToken(SICXEParser.KRSUB, 0); }
		public TerminalNode OPCODE_F1() { return getToken(SICXEParser.OPCODE_F1, 0); }
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_instruccion);
		int _la;
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case MAS:
				enterOuterAlt(_localctx, 1);
				{
				setState(97);
				match(MAS);
				setState(98);
				match(OPCODE);
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3001024512L) != 0)) {
					{
					setState(99);
					modoAcceso();
					}
				}

				}
				break;
			case OPCODE_F2_RR:
				enterOuterAlt(_localctx, 2);
				{
				setState(102);
				match(OPCODE_F2_RR);
				setState(103);
				reg();
				setState(104);
				match(COMA);
				setState(105);
				reg();
				}
				break;
			case OPCODE_F2_RN:
				enterOuterAlt(_localctx, 3);
				{
				setState(107);
				match(OPCODE_F2_RN);
				setState(108);
				reg();
				setState(109);
				match(COMA);
				setState(110);
				numeral();
				}
				break;
			case OPCODE_F2_R:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(OPCODE_F2_R);
				setState(113);
				reg();
				}
				break;
			case OPCODE:
				enterOuterAlt(_localctx, 5);
				{
				setState(114);
				match(OPCODE);
				setState(115);
				modoAcceso();
				}
				break;
			case KRSUB:
				enterOuterAlt(_localctx, 6);
				{
				setState(116);
				match(KRSUB);
				}
				break;
			case OPCODE_F1:
				enterOuterAlt(_localctx, 7);
				{
				setState(117);
				match(OPCODE_F1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ModoAccesoContext extends ParserRuleContext {
		public TerminalNode HASH() { return getToken(SICXEParser.HASH, 0); }
		public ExpresionContext expresion() {
			return getRuleContext(ExpresionContext.class,0);
		}
		public TerminalNode ARROBA() { return getToken(SICXEParser.ARROBA, 0); }
		public TerminalNode COMA() { return getToken(SICXEParser.COMA, 0); }
		public TerminalNode XREG() { return getToken(SICXEParser.XREG, 0); }
		public ModoAccesoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modoAcceso; }
	}

	public final ModoAccesoContext modoAcceso() throws RecognitionException {
		ModoAccesoContext _localctx = new ModoAccesoContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_modoAcceso);
		try {
			setState(129);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(120);
				match(HASH);
				setState(121);
				expresion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(122);
				match(ARROBA);
				setState(123);
				expresion();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(124);
				expresion();
				setState(125);
				match(COMA);
				setState(126);
				match(XREG);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(128);
				expresion();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ReferenciaContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(SICXEParser.ID, 0); }
		public NumeralContext numeral() {
			return getRuleContext(NumeralContext.class,0);
		}
		public ReferenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_referencia; }
	}

	public final ReferenciaContext referencia() throws RecognitionException {
		ReferenciaContext _localctx = new ReferenciaContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_referencia);
		try {
			setState(133);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ID:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				match(ID);
				}
				break;
			case HEXNUM:
			case NUMBER:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				numeral();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
